HxSidebar - width, collapsing click fix

--- a/Havit.Blazor.Components.Web.Bootstrap.Documentation/wwwroot/css/site.css
+++ b/Havit.Blazor.Components.Web.Bootstrap.Documentation/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 :root {
-	--hx-sidebar-min-width: 320px;
+	--hx-sidebar-width: 320px;
 }
 
 
